Fixed issues related to datatables in orders and products

--- a/Admin/Orders.html
+++ b/Admin/Orders.html
@@ -111,23 +111,19 @@
         </div>
 
 
-
-
-
-
         <!-- Orders Table -->
         <div class="overflow-x-auto bg-white rounded-lg shadow">
             <div class="bg-white p-6 rounded-lg shadow-md">
                 <!-- Controls -->
                 <div class="flex flex-col sm:flex-row gap-4 mb-4">
-                    <input type="text" id="ordersTable-search" placeholder="ابحث عن طلب..."
+                    <input type="text" id="ordersTable-search" placeholder="ابحث عن طلب..." autocomplete="off"
                         class="w-full p-2 border rounded-lg">
                 </div>
 
                 <!-- Table -->
                 <div class="overflow-x-auto rounded-lg border">
                     <table class="min-w-full divide-y divide-gray-200" id="ordersTable">
-                        <thead class="bg-gray-50">
+                        <thead class="bg-gray-200">
                             <tr>
                                 <th class="px-6 py-3 cursor-pointer">
                                     رقم الطلب
